# Utils

./: build.gradle  config.gradle  settings.gradle
androidutils/: build.gradle
androidutils/src/main/: AndroidManifest.xml
androidutils/src/main/cpp/: CMakeLists.txt  android_log.h  image_utils.cpp
androidutils/src/main/java/com/android/utils/: ImageUtils.java
app/: build.gradle
app/libs/: androidutils-release.aar
app/src/androidTest/java/com/android/imageutils/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/imageutils/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/android/imageutils/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
